--- a/chaperone.conf
+++ b/chaperone.conf
@@ -18,6 +18,16 @@ calendar.service: {
   stderr: inherit,
 }
 
+ldapdump.service: {
+  type: cron,
+  restart: true,
+  command: "curl -k --silent -u '${SERVICE_USER}:${SERVICE_PWD}' ${SERVER_URL}/eionet_account_tools/api_tool/dump_ldap",
+  interval: "0 1 * * *",
+  service_groups: INIT,
+  stdout: inherit,
+  stderr: inherit,
+}
+
 networknews.service: {
   type: cron,
   restart: true,
